# Benchmark_researching

./: .gitignore  CMakeLists.txt  GreedyPLR2.cpp  LICENSE  README.md  Shrink_promote.cpp  batchReadFile.cpp  build.sh  charcter_dataset.cpp  convert.cpp  data_pre.cpp  fitting_tree_stx.cpp  fitting_tree_test.cpp  greedyplr.cpp  linear_model_test.cpp  ltestForThreads.cpp  optimalPLR.cpp  pgm_index_test.cpp  pgm_index_test_2.cpp  prepare_data.sh  process.cpp  slide_filter.cpp  test.sh  tsv_recieve.cpp
include/: FRS.hpp  cmake_install.cmake  fitting_Tree_stx.hpp  fitting_tree.hpp  greedy (copy).hpp  greedy.hpp  greedyFTree.hpp  greedyPGM.hpp  greedyplrBasedPGM.hpp  linear_model.hpp  optimal.hpp  optimalFTree.hpp  optimalPGM.hpp  optimalPLR_C_BasedPGM.hpp  optimalPLR_C_BasedPGM_V2.hpp  optimalPLR_Foundation.hpp  optimalPLR_Foundation.v.2.hpp  paraoptimal (copy).hpp  paraoptimal.hpp  pgm_index.hpp  swing.hpp  swingBasedPGM.hpp  swingFTree.hpp  swingFilter.hpp  swingPGM.hpp
include/stx-btree-0.8.6/: Makefile  config.status
include/stx-btree-0.8.6/include/: Makefile
include/stx-btree-0.8.6/speedtest/: Makefile
include/stx-btree-0.8.6/testsuite/: Makefile  testsuite
include/stx-btree-0.8.6/testsuite/.deps/: TestTrue.Po
include/stx-btree-0.8.6/wxbtreedemo/: Makefile
prepare/: download.sh  gen_norm.py  gen_uniform.py
src/: main.cpp  paraoptimal.cpp
